<resources>
    <string name="app_name">USTHWeather</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="title_activity_pref">PrefActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>