<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#20FF0000"
    android:layout_gravity="center"
    android:id="@+id/container"
    tools:context=".ForecastFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/Mon"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/sunny" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/Tue"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/sunny" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/Wed"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/sunny" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/Thu"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/sunny" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/Fri"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/sunny" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/Sat"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/sunny" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/Sun"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/sunny" />
    </LinearLayout>


</LinearLayout>